# model-viewer

./: README.md  model-viewer.cabal  stack.yaml
example-files/: brickcube.json  testmodel.json
shaders/: backdrop.frag  backdrop.vert  coloredmodel.frag  coloredmodel.vert  logo.frag  logo.vert  shadowmap.frag  shadowmap.vert  texturedmodel.frag  texturedmodel.vert
src/: Backdrop.hs  Camera.hs  Helper.hs  Input.hs  Lightning.hs  Logo.hs  Main.hs  Model.hs  ModelSpec.hs  Options.hs  RenderState.hs  ShadowDebug.hs  ShadowMap.hs
