name:                model-viewer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/model-viewer#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable model-viewer
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Backdrop
                       Camera
                       EventLoop
                       Helper
                       Input
                       Model
                       ModelSpec
                       Lightning
                       Logo
                       Options
                       RenderState
                       ShadowMap
                       ShadowDebug
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , GLFW-b
                     , light-weight-opengl
                     , light-weight-opengl-obj
                     , linear
                     , optparse-applicative
                     , vector
